# agent-auditor

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  IDEAS.md  LESSONS_LEARNED.md  MIGRATION.md  README.md  mise.toml  pyproject.toml  ruff.toml
.claude/: hookify.require-uv.local.md
agents/: skill-auditor-v3.md  skill-auditor-v4.md  skill-auditor-v5.md  skill-auditor-v6.md  skill-auditor.md
docs/: FUTURE.md
docs/api/: sdk-reference.md
docs/guides/: quick-reference.md
docs/research/: the-way-forward-feedback.md  the-way-forward.md
scripts/: README.md
src/skill_auditor/: cli.py  metrics_extractor.py  validation.py
src/tests/: test_b4_patterns.py
