[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-auditor"
version = "0.1.0"
description = "Comprehensive auditing system for Claude Code skills, agents, and components"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "basher8383" }
]
keywords = [
    "claude-code",
    "skill-auditor",
    "validation",
    "compliance",
    "anthropic"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "claude-agent-sdk>=0.1.8",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.5",
    "pyright>=1.1.407",
    "pytest>=8.0.0",
]

[project.scripts]
skill-auditor = "skill_auditor.cli:_main"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_auditor"]

[tool.ruff]
# Configuration inherited from ruff.toml
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pyright]
# Configuration inherited from pyrightconfig.json
include = ["src"]
exclude = ["**/__pycache__", "**/.*"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

